--- a/src/app/room/room.component.html
+++ b/src/app/room/room.component.html
@@ -1,3 +1,4 @@
-<p>
-  room works!
-</p>
+<div class="room" ngClass="[type]" [ngStyle]="{'width': (xdim * xunit) + 'px', 'height': (ydim * yunit) + 'px'}">
+  <span class="name">{{ name }}</span>
+  <span class="door {{pos}}" [ngClass]="{'horizontal': isHorizontal, 'vertical': !isHorizontal}"></span>
+</div>
