implemented the position marker component

--- a/src/app/position-marker/position-marker.component.html
+++ b/src/app/position-marker/position-marker.component.html
@@ -1,3 +1,4 @@
-<p>
-  position-marker works!
-</p>
+<div class="user-marker {{status}}">
+  <div class="outer"></div>
+  <div class="inner"></div>
+</div>
