--- a/src/app/position-marker/position-marker.component.scss
+++ b/src/app/position-marker/position-marker.component.scss
@@ -1,18 +1,20 @@
-$marker-color: #1F6BFE;
-$marker-color-light: rgba($marker-color, .2);
+$marker-color: #007bff;
+$marker-color-light: rgba($marker-color, .15);
 
-$marker-size: 75px;
+$marker-size: 50px;
 $marker-small-size: 20%;
-:host {
-
+.marker {
+  position: absolute;
 }
 .user-marker {
   height: $marker-size;
   width: $marker-size;
   position:relative;
+  z-index: 150;
   .outer {
     border-radius: 50%;
     border: 2px solid $marker-color;
+    box-sizing: border-box;
     background-color: $marker-color-light;
     width: 100%;
     height: 100%;
