--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -1,8 +1,9 @@
 .board {
-  width: 600px;
-  height: 300px;
+  width: 100%;
+  height: 100%;
   border: 1px solid #ccc;
   position: relative;
-  margin:100px auto 0;
   background: white;
+  border-radius: 2px;
+
 }
